TM-11703 Fix issue selecting ranges whenever the lock is on

--- a/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
@@ -27,9 +27,11 @@
                                 </div>
 	                        </div>
 		                    <div>
+			                    <!--(valueChange)="onValueChange($event)"-->
                                 <kendo-multiviewcalendar
-		                                (valueChange)="onValueChange($event)"
-		                                kendoDateRangeSelection [(selectionRange)]="model"></kendo-multiviewcalendar>
+		                                [(activeRangeEnd)]="activeRangeEnd"
+		                                (selectionRangeChange)="handleSelectionRange($event)"
+		                                kendoDateRangeSelection [selectionRange]="model"></kendo-multiviewcalendar>
 	                        </div>
                         </div>
 	                    <div>
