TM-11703 Remove not needed code

--- a/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
@@ -14,15 +14,15 @@
                         <div>
 	                        <div class="times-container">
                                 <div class="times-section">
+	                                <!--(valueChange)="onValueChange($event)"-->
                                     <kendo-dateinput
                                             [format]="'dd-MMM-yyyy HH:mm:ss'"
-                                            (valueChange)="onValueChange($event)"
                                             [(value)]="model.start"></kendo-dateinput>
                                 </div>
                                 <div class="times-section">
+	                                <!--(valueChange)="onValueChange($event)"-->
                                     <kendo-dateinput
                                             [format]="'dd-MMM-yyyy HH:mm:ss'"
-                                            (valueChange)="onValueChange($event)"
                                             [(value)]="model.end"></kendo-dateinput>
                                 </div>
 	                        </div>
