--- a/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
@@ -6,7 +6,7 @@
                 <button (click)="cancelCloseDialog()" type="button" class="close component-action-close" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
-                <h4 class="modal-title">Select an interval</h4>
+                <h4 class="modal-title">{{getTitle()}}</h4>
             </div>
             <div class="modal-body">
                 <div class="modal-body-container">
