--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -336,7 +336,7 @@
                                                         </button>
                                                     </ng-template>
                                                     <!-- Columns -->
-                                                    <kendo-grid-column *ngFor="let column of taskSuccessorPredecessorColumnsModel.columns"
+                                                    <kendo-grid-column *ngFor="let column of predecessorSuccesorColumns"
                                                                        field="{{column.property}}"
                                                                        [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
                                                         <!-- Header Template -->
@@ -378,7 +378,7 @@
                                                     </button>
                                                 </ng-template>
                                                 <!-- Columns -->
-                                                <kendo-grid-column *ngFor="let column of taskSuccessorPredecessorColumnsModel.columns"
+                                                <kendo-grid-column *ngFor="let column of predecessorSuccesorColumns"
                                                                    field="{{column.property}}"
                                                                    [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
                                                     <!-- Header Template -->
