--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -343,17 +343,28 @@
                                                             <label>{{column.label}}</label>
                                                         </ng-template>
 
+                                                        <!--
                                                         <ng-template kendoGridCellTemplate *ngIf="column.property === 'taskNumber'" let-dataItem let-rowIndex="rowIndex">
                                                             <label class="pointer pad-left-7" (click)="openTaskDetail(dataItem, modalType.VIEW)">{{dataItem.taskNumber}}</label>
                                                         </ng-template>
+                                                        -->
 
                                                         <ng-template kendoGridCellTemplate *ngIf="column.property === 'desc'" let-dataItem let-rowIndex="rowIndex">
-                                                            <label class="pointer pad-left-7" (click)="openTaskDetail(dataItem, modalType.VIEW)">{{dataItem.desc}}</label>
+                                                            <!--<label class="pointer pad-left-7" (click)="openTaskDetail(dataItem, modalType.VIEW)">{{dataItem.desc}}</label>-->
+                                                            <tds-combobox
+                                                                    [(model)]="dataItem.id"
+                                                                    [(metaParam)]="dataItem.id"
+                                                                    [serviceRequest]="getTasksForComboBox"
+                                                                    (selectionChange)="onPredecessorChange($event, dataItem)">
+                                                            </tds-combobox>
                                                         </ng-template>
 
+                                                        <!--
                                                         <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
                                                             <label class="pad-left-7">{{dataItem[column.property]}}</label>
                                                         </ng-template>
+                                                        -->
+
 
                                                     </kendo-grid-column>
                                                 <kendo-grid-messages noRecords="There are no records to display."> </kendo-grid-messages>
