TM-11073 Show task notes grid

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -10,6 +10,13 @@
     .modal-body
       height: 86%
       form
+        td.valueNW
+          width: 160px
+          max-width: 160px
+        kendo-dropdownlist.k-widget.k-dropdown,
+        kendo-datepicker.k-widget.k-datepicker,
+        kendo-dateinput.k-widget.k-dateinput
+          width: 100%
         .estimated-finish
           display: flex
           justify-content: space-between
