--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -18,11 +18,13 @@
                         <tbody class="full-height task-layout">
                             <tr class="no-grow-container">
                                 <td class="task-details" colspan="2">
+	                                <!--
                                     <div class="btn-collapsed-fixed-right">
                                         <button class="btn btn-default" (click)="onCollapseTaskDetail()">
                                             <i class="fa" [ngClass]="{'fa-angle-double-down': !collapsedTaskDetail, 'fa-angle-double-right': collapsedTaskDetail}"></i>
                                         </button>
                                     </div>
+                                    -->
                                     <div class="dialog">
                                         <table>
                                             <tbody>
@@ -30,8 +32,12 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label style="min-width: 104px;"><span>Task # {{model.taskNumber}}</span></label>
                                                     </td>
-                                                    <td class="valueNW" colspan="5" style="max-width: 400px; font-weight:bold;">
+                                                    <!--<td class="valueNW description-container" [attr.colspan]="collapsedTaskDetail ? 1 : 5">-->
+                                                    <td class="valueNW description-container" colspan="5">
                                                         <input type="text" name="comment" [(ngModel)]="model.comment" required>
+                                                        <button class="btn btn-default" (click)="onCollapseTaskDetail()">
+                                                            <i class="fa" [ngClass]="{'fa-angle-double-down': !collapsedTaskDetail, 'fa-angle-double-right': collapsedTaskDetail}"></i>
+                                                        </button>
                                                     </td>
                                                 </tr>
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
@@ -175,7 +181,7 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Instruction Link</span></label>
                                                     </td>
-                                                    <td class="valueNW">
+                                                    <td class="valueNW instructions-link">
                                                         <input type="text" name="instructionLink"
                                                                placeholder="Enter URL or Label|URL"
                                                                [(ngModel)]="model.instructionLink" />
