--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -11,11 +11,18 @@
       height: 86%
       form
         td.valueNW
-          width: 160px
-          max-width: 160px
+          width: 130px
+          max-width: 130px
+        td.description-container
+          max-width: 100%
+          input
+            width: 92%
+          button
+            float: right
         kendo-dropdownlist.k-widget.k-dropdown,
         kendo-datepicker.k-widget.k-datepicker,
-        kendo-dateinput.k-widget.k-dateinput
+        kendo-dateinput.k-widget.k-dateinput,
+        .instructions-link  input
           width: 100%
         .estimated-finish
           display: flex
@@ -38,7 +45,7 @@
             display: flex
             flex-direction: column
             input
-              width: 85%
+              width: 95%
               text-align: center
             label
               font-weight: normal
