TM-11703 Style kendo combobox background

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -13,6 +13,9 @@
         td.valueNW
           width: 130px
           max-width: 130px
+          kendo-dropdownlist.k-widget.k-dropdown
+            span.k-dropdown-wrap
+              background: white
         td.description-container
           max-width: 100%
           input
