TM-11703 Add placeholder for note field

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -300,7 +300,11 @@
                                                             </label>
                                                         </div>
                                                     </td>
-                                                    <td colspan="4">
+                                                    <td class="label U" nowrap="nowrap">
+                                                        <label><span>Note</span></label>
+                                                    </td>
+	                                                <td class="valueNW" colspan="4">
+                                                        <textarea name="" id="" rows="3"></textarea>
                                                     </td>
                                                 </tr>
                                             </tbody>
