--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -25,7 +25,8 @@
         kendo-dropdownlist.k-widget.k-dropdown,
         kendo-datepicker.k-widget.k-datepicker,
         kendo-dateinput.k-widget.k-dateinput,
-        .instructions-link  input
+        .instructions-link  input,
+        textarea
           width: 100%
         .estimated-finish
           display: flex
