--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -473,9 +473,9 @@
             </div>
             <div class="modal-footer form-group-center">
 	            <button class="btn btn-primary pull-left"
-	                    (click)="editTaskDetail()" type="button">
-		            <span  class="glyphicon glyphicon-pencil"></span>
-		            <span>Edit</span>
+	                    (click)="updateTask()" type="button">
+		            <span  class="fa fa-fw fa-floppy-o"></span>
+		            <span>Update</span>
 	            </button>
                 <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
                     <span class="glyphicon glyphicon-ban-circle"></span>
