--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -304,7 +304,7 @@
                                                         <label><span>Note</span></label>
                                                     </td>
 	                                                <td class="valueNW" colspan="4">
-                                                        <textarea name="" id="" rows="3"></textarea>
+                                                        <textarea name="note" id="note" rows="3" [(ngModel)]="model.note"></textarea>
                                                     </td>
                                                 </tr>
                                             </tbody>
