--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -16,6 +16,11 @@
           kendo-dropdownlist.k-widget.k-dropdown
             span.k-dropdown-wrap
               background: white
+          kendo-dropdownlist.status.k-widget.k-dropdown
+            color: inherit
+            span.k-dropdown-wrap
+              background: inherit
+              color: inherit
         td.description-container
           max-width: 100%
           input
