TM-11703 Apply correct colors to status list

--- a/web-app/tds/web-app/css/base/taskstatus.sass
+++ b/web-app/tds/web-app/css/base/taskstatus.sass
@@ -1,31 +1,31 @@
 .task-hold
   background-color: $color-task-hold-bg--yellow !important
-  color: $color--black
+  color: $color--black!important
   font-weight: bold
 
 .task-hold_overtime
   background-color: $color-task-hold-bg-overtime--red !important
-  color: $color--black
+  color: $color--black!important
   font-weight: bold
 
 .task-planned
   background-color: $color-task-planned-bg--white !important
-  color: $color--grey
+  color: $color--grey!important
   font-weight: bold
 
 .task-pending
   background-color: $color-task-pending-bg--white !important
-  color: $color--black
+  color: $color--black!important
   font-weight: bold
 
 .task-ready
   background-color: $color-task-ready-bg--green !important
-  color: $color--white
+  color: $color--white!important
   font-weight: bold
 
 .task-started
   background-color: $color-task-started-bg--darkturquoise !important
-  color: $color--white
+  color: $color--white!important
   font-weight: bold
 
 .task-completed2
@@ -36,7 +36,7 @@
 
 .task-completed
   background-color: $color-task-completed-bg--blue2 !important
-  color: $color--white
+  color: $color--white!important
   font-weight: bold
 
 .task-done2
@@ -47,7 +47,7 @@
 
 .task-done
   background-color: $color-task-done-bg--darkblue !important
-  color: $color--white
+  color: $color--white!important
   font-weight: bold
 
 .task-na
