--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -13,11 +13,13 @@
         td.valueNW
           width: 160px
           max-width: 160px
-          kendo-dropdownlist.k-widget.k-dropdown
+          kendo-dropdownlist
             span.k-dropdown-wrap
               background: white
-          kendo-dropdownlist.status.k-widget.k-dropdown
-            color: inherit
+          kendo-dropdownlist.status
+            margin: 0;
+            padding: 0;
+            border: 0;
             span.k-dropdown-wrap
               background: inherit
               color: inherit
