--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -32,7 +32,6 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label style="min-width: 104px;"><span>Task # {{model.taskNumber}}</span></label>
                                                     </td>
-                                                    <!--<td class="valueNW description-container" [attr.colspan]="collapsedTaskDetail ? 1 : 5">-->
                                                     <td class="valueNW description-container" colspan="5">
                                                         <input type="text" name="comment" [(ngModel)]="model.comment" required>
                                                         <button class="btn btn-default" (click)="onCollapseTaskDetail()">
@@ -44,10 +43,10 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Status</span></label>
                                                     </td>
-                                                    <td class="valueNW task-{{model.status |  lowercase}}">
+                                                    <td class="valueNW">
                                                         <kendo-dropdownlist
                                                                 name="statusList"
-                                                                class="form-control status"
+                                                                [class]="'form-control status task-' + model.status.toLowerCase()"
                                                                 [data]="model.statusList"
                                                                 [(ngModel)]="model.status"
                                                                 (valueChange)="onStatusChange($event)">
