TM-11703 Clean up
Remove not needed variables and code not used

--- a/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
@@ -14,20 +14,17 @@
                         <div>
 	                        <div class="times-container">
                                 <div class="times-section">
-	                                <!--(valueChange)="onValueChange($event)"-->
                                     <kendo-dateinput
                                             [format]="'dd-MMM-yyyy HH:mm:ss'"
                                             [(value)]="model.start"></kendo-dateinput>
                                 </div>
                                 <div class="times-section">
-	                                <!--(valueChange)="onValueChange($event)"-->
                                     <kendo-dateinput
                                             [format]="'dd-MMM-yyyy HH:mm:ss'"
                                             [(value)]="model.end"></kendo-dateinput>
                                 </div>
 	                        </div>
 		                    <div>
-			                    <!--(valueChange)="onValueChange($event)"-->
                                 <kendo-multiviewcalendar
 		                                [(activeRangeEnd)]="activeRangeEnd"
 		                                (selectionRangeChange)="handleSelectionRange($event)"
@@ -39,20 +36,23 @@
 			                    <div class="duration-value"><label>Estimated duration</label></div>
 			                    <div class="duration-value">
 				                    <input type="number"
+				                           min="0"
 				                           (change)="updateEstimatedFinish('days')"
-				                           [(ngModel)]="durationParts.days" name="durationDays" id="durationDays" >
+				                           [(ngModel)]="model.duration.days" name="durationDays" id="durationDays" >
 				                    <label class="label-part" for="durationDays">Days</label>
 			                    </div>
 			                    <div  class="duration-value">
 				                    <input type="number"
+				                           min="0"
 				                           (change)="updateEstimatedFinish('hours')"
-				                           [(ngModel)]="durationParts.hours" name="durationHours" id="durationHours" >
+				                           [(ngModel)]="model.duration.hours" name="durationHours" id="durationHours" >
 				                    <label class="label-part" for="durationHours">Hours</label>
 			                    </div>
 			                    <div  class="duration-value">
 				                    <input type="number"
+				                           min="0"
 				                           (change)="updateEstimatedFinish('minutes')"
-				                           [(ngModel)]="durationParts.minutes" name="durationMinutes" id="durationMinutes" >
+				                           [(ngModel)]="model.duration.minutes" name="durationMinutes" id="durationMinutes" >
 				                    <label class="label-part" for="durationMinutes">Minutes</label>
 			                    </div>
 			                    <label data-toggle="popover"
