TM-11703 Fix issue getting hours and minutes of empty dates

--- a/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
@@ -15,12 +15,12 @@
 	                        <div class="times-container">
                                 <div class="times-section">
                                     <kendo-dateinput
-                                            [format]="'dd-MMM-yyyy HH:mm:ss'"
+                                            [format]="model.start ? 'dd-MMM-yyyy HH:mm:ss' : ''"
                                             [(value)]="model.start"></kendo-dateinput>
                                 </div>
                                 <div class="times-section">
                                     <kendo-dateinput
-                                            [format]="'dd-MMM-yyyy HH:mm:ss'"
+                                            [format]="model.end ? 'dd-MMM-yyyy HH:mm:ss' : ''"
                                             [(value)]="model.end"></kendo-dateinput>
                                 </div>
 	                        </div>
