--- a/web-app/tds/web-app/css/shared/components/date-range-selector.component.sass
+++ b/web-app/tds/web-app/css/shared/components/date-range-selector.component.sass
@@ -20,6 +20,7 @@
         .duration-value
           margin-right: 15px
           margin-top: 10px
+          cursor: pointer
           input
             width: 40px
             text-align: center
