TM-11703 Updating start or end dates update duration fields

--- a/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/date-range-selector/date-range-selector.component.html
@@ -15,11 +15,15 @@
 	                        <div class="times-container">
                                 <div class="times-section">
                                     <kendo-dateinput
+		                                    [disabled]="model.locked"
+		                                    (valueChange)="onDateChanged('start', $event)"
                                             [format]="model.start ? 'dd-MMM-yyyy HH:mm:ss' : ''"
                                             [(value)]="model.start"></kendo-dateinput>
                                 </div>
                                 <div class="times-section">
                                     <kendo-dateinput
+		                                    [disabled]="model.locked"
+		                                    (valueChange)="onDateChanged('end', $event)"
                                             [format]="model.end ? 'dd-MMM-yyyy HH:mm:ss' : ''"
                                             [(value)]="model.end"></kendo-dateinput>
                                 </div>
