--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -10,6 +10,10 @@
     .modal-body
       height: 86%
       form
+        .duplicate-error
+          font-weight: normal
+          color: $color-message-error--red
+          float: right
         td.valueNW
           width: 160px
           max-width: 160px
