TM-11703 Handle duplicated entries for predecessors and successors list

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -340,7 +340,7 @@
                                                     <!-- Toolbar Template -->
                                                     <ng-template kendoGridToolbarTemplate [position]="'top'">
                                                         <label class="pad-top-2 pad-left-10 mar-bottom-0">Predecessor ({{dataGridTaskPredecessorsHelper.gridData.data.length}})</label>
-                                                        <button (click)="onAddPredecessor()" class="btn btn-add-new-dependency btn-default float-right mar-right-15 pad-top-2" type="button">
+                                                        <button (click)="onAddTaskDependency(model.predecessorList, dataGridTaskPredecessorsHelper)" class="btn btn-add-new-dependency btn-default float-right mar-right-15 pad-top-2" type="button">
                                                             <i class="fa fa-med fa-fw fa-plus-circle"></i> <span>Add</span>
                                                         </button>
                                                     </ng-template>
@@ -351,7 +351,7 @@
                                                         <!-- Header Template -->
                                                         <ng-template kendoGridHeaderTemplate>
                                                             <label>{{column.label}}</label>
-                                                            <label *ngIf="hasDuplicates(model.predecessorList)" class="duplicate-error">There are duplicates entries</label>
+                                                            <label *ngIf="hasDuplicates(model.predecessorList)" class="duplicate-error">There are duplicate entries</label>
                                                         </ng-template>
 
                                                         <ng-template kendoGridCellTemplate *ngIf="column.property === 'desc'" let-dataItem let-rowIndex="rowIndex">
@@ -360,7 +360,7 @@
                                                                     [(model)]="dataItem.model"
                                                                     [(metaParam)]="dataItem.id"
                                                                     [serviceRequest]="getTasksForComboBox"
-                                                                    (selectionChange)="onPredecessorChange($event, dataItem, rowIndex)">
+                                                                    (selectionChange)="onDependencyTaskChange($event, model.predecessorList, dataGridTaskPredecessorsHelper,  rowIndex)">
                                                             </tds-combobox>
                                                         </ng-template>
                                                     </kendo-grid-column>
@@ -379,7 +379,7 @@
                                                 <!-- Toolbar Template -->
                                                 <ng-template kendoGridToolbarTemplate [position]="'top'">
                                                     <label class="pad-top-2 pad-left-10 mar-bottom-0">Successors ({{dataGridTaskSuccessorsHelper.gridData.data.length}})</label>
-                                                    <button (click)="onAddSuccessor()" class="btn btn-add-new-dependency btn-default float-right mar-right-15 pad-top-2" type="button">
+                                                    <button (click)="onAddTaskDependency(model.successorList, dataGridTaskSuccessorsHelper)" class="btn btn-add-new-dependency btn-default float-right mar-right-15 pad-top-2" type="button">
                                                         <i class="fa fa-med fa-fw fa-plus-circle"></i> <span>Add</span>
                                                     </button>
                                                 </ng-template>
@@ -390,7 +390,7 @@
                                                     <!-- Header Template -->
                                                     <ng-template kendoGridHeaderTemplate>
                                                         <label>{{column.label}}</label>
-                                                        <label *ngIf="hasDuplicates(model.successorList)" class="duplicate-error">There are duplicates entries</label>
+                                                        <label *ngIf="hasDuplicates(model.successorList)" class="duplicate-error">There are duplicate entries</label>
                                                     </ng-template>
 
                                                     <ng-template kendoGridCellTemplate *ngIf="column.property === 'desc'" let-dataItem let-rowIndex="rowIndex">
@@ -399,7 +399,7 @@
                                                                 [(model)]="dataItem.model"
                                                                 [(metaParam)]="dataItem.id"
                                                                 [serviceRequest]="getTasksForComboBox"
-                                                                (selectionChange)="onSuccessorChange($event, dataItem, rowIndex)">
+                                                                (selectionChange)="onDependencyTaskChange($event, model.successorList, dataGridTaskSuccessorsHelper,  rowIndex)">
                                                         </tds-combobox>
                                                     </ng-template>
                                                 </kendo-grid-column>
