--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -273,8 +273,7 @@
                 </div>
             </div>
             <div class="modal-footer form-group-center">
-                <button class="btn btn-primary pull-left"
-                        (click)="editTaskDetail()" type="button">
+                <button class="btn btn-primary pull-left" (click)="editTaskDetail()" type="button" [disabled]="!hasEditTaskPermission">
                     <span  class="glyphicon glyphicon-pencil"></span>
                     <span>Edit</span>
                 </button>
@@ -282,7 +281,7 @@
                     <span class="glyphicon glyphicon-ban-circle"></span>
                     <span>Close</span>
                 </button>
-                <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete">
+                <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete" [disabled]="!hasDeleteTaskPermission">
                     <span  class="glyphicon glyphicon-trash"></span>
                     <span>Delete</span>
                 </button>
